name: libnanomsg
version: 0.1.0
synopsis:
  Low-level bindings to the nanomsg library
description:
  Low-level bindings to the nanomsg library

homepage: https://github.com/bgamari/nanomsg-haskell
license: MIT
license-file: LICENSE
author: Mitchell Rosen
maintainer:
  Ben Gamari <ben@smart-cactus.org>
  Mitchell Rosen <mitchellwrosen@gmail.com>
copyright: Copyright (c) 2013 the nanomsg-haskell authors
category: Network
build-type: Simple
cabal-version: >=1.10
tested-with: GHC == 7.10.2

source-repository head
  type: git
  location: https://github.com/bgamari/nanomsg-haskell

library
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.9.0 && < 0.11,
    text

  default-extensions:
    DataKinds
    ForeignFunctionInterface
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TypeFamilies

  default-language:
    Haskell2010

  extra-libraries:
    nanomsg

  exposed-modules:
    Libnanomsg

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  includes:
    nanomsg/nn.h

  other-modules:
    Internal
    Libnanomsg.Domain
    Libnanomsg.Level
    Libnanomsg.Option
    Libnanomsg.Protocol
    Libnanomsg.Transport
